# article_degoogler

./: README.md  fix_links.py  pyproject.toml
src/article_degoogler/: __init__.py  article_degoogler.py
