# Tell the editor exactly which JSON Schema to use since parser plugin doesn't like project.dependencies
"$schema" = "https://raw.githubusercontent.com/pypa/pep621/main/pyproject.toml.schema.json"
# PEP 621-compliant metadata
[project]
name = "article-degoogler"
version = "0.1.3"
description = "Clean up exported web content to remove Google-injected link decorations"
authors = [{ name = "Dave Thomas", email = "davidcthomas@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
fix-links = "article_degoogler.article_degoogler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/article_degoogler"]

[tool.hatch.build.targets.sdist]
include = ["src"]
